--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Get in touch with musician Obofour Raphael. Contact form, email, phone, and social media details.">
     <meta property="og:title" content="Obofour Raphael - Contact">
     <meta property="og:description" content="Get in touch with musician Obofour Raphael. Contact form, email, phone, and social media details.">
-    <meta property="og:image" content="assets/images/hero.jpg">
+    <meta property="og:image" content="ObofourThumb.jpg">
     <meta property="og:url" content="https://obo4raphael.com/contact.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Obofour Raphael - Contact">
     <meta name="twitter:description" content="Get in touch with musician Obofour Raphael. Contact form, email, phone, and social media details.">
-    <meta name="twitter:image" content="assets/images/hero.jpg">
+    <meta name="twitter:image" content="ObofourThumb.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
