--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Official website of musician Obofour Raphael. Discover his biography, videos, discography, and more.">
     <meta property="og:title" content="Welcome to Obofour Raphael's Official Website">
     <meta property="og:description" content="Official website of musician Obofour Raphael. Discover his biography, videos, discography, and more.">
-    <meta property="og:image" content="assets/images/hero.jpg">
+    <meta property="og:image" content="ObofourThumb.jpg">
     <meta property="og:url" content="https://obo4raphael.com">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Welcome to Obofour Raphael's Official Website">
     <meta name="twitter:description" content="Official website of musician Obofour Raphael. Discover his biography, videos, discography, and more.">
-    <meta name="twitter:image" content="assets/images/hero.jpg">
+    <meta name="twitter:image" content="ObofourThumb.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
