--- a/merch.html
+++ b/merch.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Official merchandise store for musician Obofour Raphael. Shop exclusive apparel, accessories, and collectibles.">
     <meta property="og:title" content="Obofour Raphael - Merchandise">
     <meta property="og:description" content="Official merchandise store for musician Obofour Raphael. Shop exclusive apparel, accessories, and collectibles.">
-    <meta property="og:image" content="assets/images/hero.jpg">
+    <meta property="og:image" content="ObofourThumb.jpg">
     <meta property="og:url" content="https://obo4raphael.com/merch.html">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Obofour Raphael - Merchandise">
     <meta name="twitter:description" content="Official merchandise store for musician Obofour Raphael. Shop exclusive apparel, accessories, and collectibles.">
-    <meta name="twitter:image" content="assets/images/hero.jpg">
+    <meta name="twitter:image" content="ObofourThumb.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
