--- a/discography.html
+++ b/discography.html
@@ -8,11 +8,15 @@
     <meta property="og:title" content="Obofour Raphael - Discography">
     <meta property="og:description" content="Explore the discography of musician Obofour Raphael, including albums, singles, and audio previews.">
     <meta property="og:image" content="ObofourThumb.jpg">
+    <meta property="og:image:alt" content="Obofour Raphael Discography Page Thumbnail">
     <meta property="og:url" content="https://obo4raphael.com/discography.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Obofour Raphael Official Website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Obofour Raphael - Discography">
     <meta name="twitter:description" content="Explore the discography of musician Obofour Raphael, including albums, singles, and audio previews.">
     <meta name="twitter:image" content="ObofourThumb.jpg">
+    <meta name="twitter:image:alt" content="Obofour Raphael Discography Page Thumbnail">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
