--- a/home.html
+++ b/home.html
@@ -8,11 +8,15 @@
     <meta property="og:title" content="Obofour Raphael - Home">
     <meta property="og:description" content="Welcome to the official home page of musician Obofour Raphael. Explore his music, biography, videos, and more.">
     <meta property="og:image" content="ObofourThumb.jpg">
+    <meta property="og:image:alt" content="Obofour Raphael Home Page Thumbnail">
     <meta property="og:url" content="https://obo4raphael.com/home.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Obofour Raphael Official Website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Obofour Raphael - Home">
     <meta name="twitter:description" content="Welcome to the official home page of musician Obofour Raphael. Explore his music, biography, videos, and more.">
     <meta name="twitter:image" content="ObofourThumb.jpg">
+    <meta name="twitter:image:alt" content="Obofour Raphael Home Page Thumbnail">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
