--- a/news.html
+++ b/news.html
@@ -8,11 +8,15 @@
     <meta property="og:title" content="Obofour Raphael - News & Updates">
     <meta property="og:description" content="Latest news, updates, and announcements from musician Obofour Raphael. Stay informed about upcoming releases, tours, and events.">
     <meta property="og:image" content="ObofourThumb.jpg">
+    <meta property="og:image:alt" content="Obofour Raphael News Page Thumbnail">
     <meta property="og:url" content="https://obo4raphael.com/news.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Obofour Raphael Official Website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Obofour Raphael - News & Updates">
     <meta name="twitter:description" content="Latest news, updates, and announcements from musician Obofour Raphael. Stay informed about upcoming releases, tours, and events.">
     <meta name="twitter:image" content="ObofourThumb.jpg">
+    <meta name="twitter:image:alt" content="Obofour Raphael News Page Thumbnail">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
