--- a/discography.html
+++ b/discography.html
@@ -55,12 +55,11 @@
                 <div class="album-card">
                     <div class="album-cover">
                         <img src="AdomAkyedee.JPG" alt="Adom Akyedee Album Cover" loading="lazy">
-                        <div class="coming-soon-badge">OUT SOON</div>
                     </div>
                     <div class="album-info">
                         <h3>Adom Akyedee</h3>
                         <p class="artist">Obofour Raphael</p>
-                        <p class="release-date">Release Date: September 26th</p>
+                        <p class="release-date">Out Now!!</p>
                         <p class="track-count">18 Tracks</p>
 
                         <div class="album-buttons">
